<resources>
    <string name="app_name">Ass1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Login</string>
    <string name="change_button">Save</string>

    <string name="menu_home">Home</string>
    <string name="menu_edit_finance">Manage Finance</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_income">Income</string>
    <string name="menu_expenditure">Expenditure</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="find">Find</string>
    <string name="id">ID</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="balance">Balance</string>
    <string name="all">All</string>
    <string name="settings">Settings</string>
    <string name="manage_finance">Manage your finance down below</string>

    <string name="firstName_key">firstName</string>
    <string name="lastName_key">lastName</string>
</resources>