<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.home.FinanceFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="92dp"
        android:text="@string/manage_finance"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="23dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="407dp"
        android:layout_height="148dp"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:textColor="@color/teal_200" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="209dp"
                android:layout_height="54dp"
                android:ems="10"
                android:hint="@string/category"
                android:inputType="textPersonName"
                android:textColor="@color/teal_200" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="number"
                android:textColor="@color/teal_200" />

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_find">

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_find"

        app:layout_constraintTop_toBottomOf="@+id/tableLayout">


        <RadioButton
            android:id="@+id/income_RB_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/menu_income" />

        <RadioButton
            android:id="@+id/expenditure_RB_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/menu_expenditure" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="279dp"
        android:layout_weight="1"
        android:background="@color/teal_200"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:background="@color/teal_200"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="160dp"
        android:layout_weight="1"
        android:background="@color/teal_200"
        android:text="@string/find"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>