<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.FinanceFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="392dp"
        android:layout_height="346dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="96dp"
        android:text="@string/balance"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_balance"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:layout_width="179dp"
        android:layout_height="42dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="146dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="306dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/all_RB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/income_RB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/menu_income" />
        <RadioButton
            android:id="@+id/expenditure_RB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/menu_expenditure" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>